@startuml

!theme plain
skinparam linetype ortho

class bed_types {
   name: varchar(255)
}
class check_ins {
   reservation_id: uuid
   employee_id: uuid
   --
   check_in_at: timestamp(0)
   check_in_by: varchar(255)
   notes: varchar(255)
}
class check_outs {
   reservation_id: uuid
   employee_id: uuid
   --
   check_out_at: timestamp(0)
   check_out_by: varchar(255)
   final_total: float
   notes: varchar(255)
}
class countries {
   code: varchar(255)
   name: varchar(255)
   created_by: uuid
}
class departments {
   name: varchar(255)
}
class employees {
   user_id: integer
   department_id: uuid
   --
   gender: varchar(255)
   phone: varchar(255)
   address: varchar(255)
   hire_date: date
   salary: float
}
class facilities {
   name: varchar(255)
   description: varchar(255)
}
class geographies {
   code: varchar(255)
   name: varchar(255)
   created_by: uuid
}
class guest_types {
   code: varchar(255)
   name: varchar(255)
   created_by: uuid
}
class guests {
   user_id: integer
   nik_passport: varchar(255)
   phone: varchar(255)
   birthdate: date
   gender: varchar(255)
   profession: varchar(255)
   nationality: varchar(255)
   country: varchar(255)
   address: varchar(255)
}
class nationalities {
   code: varchar(255)
   name: varchar(255)
   created_by: uuid
}
class rate_types {
   code: varchar(255)
   name: varchar(255)
   rate: float
}
class reservation_guests {
   reservation_id: uuid
   guest_id: uuid
   --
   name: varchar(255)
   phone: varchar(255)
   nik_passport: varchar(255)
   email: varchar(255)
   address: varchar(255)
   nationality: varchar(255)
   country: varchar(255)
}
class reservation_rooms {
   reservation_id: uuid
   room_id: uuid
   room_type_id: uuid
   --
   room_type_name: varchar(255)
   room_number: varchar(255)
   room_rate: varchar(255)
   bed_type: varchar(255)
   view: varchar(255)
}
class reservation_transactions {
   reservation_id: uuid
   --
   amount: float
   type: enum
   is_paid: boolean
   description: varchar(255)
}
class reservations {
   start_date: date
   end_date: date
   booking_number: varchar(255)
   arrival_from: varchar(255)
   children: integer
   adults: integer
   pax: integer
   length_of_stay: integer
   total_price: float
   guest_type: enum
   smoking_type: enum
   include_breakfast: boolean
   employee_name: varchar(255)
   employee_id: uuid
   status: enum
   booking_type: enum
   visit_purpose: enum
   room_package: enum
   payment_method: enum
   status_acc: enum
   discount: float
   discount_reason: varchar(255)
   commission_percentage: float
   commission_amount: float
   remarks: varchar(255)
   advance_remarks: varchar(255)
   advance_amount: varchar(255)
   canceled_at: timestamp(0)
   --
   snap_token: varchar(255)
   payment_type: varchar(255)
   transaction_id: varchar(255)
   transaction_status: varchar(255)
   transaction_time: varchar(255)
   transaction_bank: varchar(255)
}
class room_facilities {
   room_id: uuid
   facility_id: uuid
}
class room_type_facilities {
   room_type_id: uuid
   facility_id: uuid
}
class room_types {
   code: varchar(255)
   name: varchar(255)
   capacity: integer
   size: float
   base_rate: float
   images: array
   --
   rate_type_id: uuid
   bed_type_id: uuid
}
class rooms {
   id: uuid
   room_number: integer
   floor_number: integer
   view: varchar(255)
   condition: varchar(255)
   status: varchar(255)
   price: float
   capacity: integer
   size: float
   smoking_type: varchar(255)
   images: array
   --
   rate_type_id: uuid
   room_type_id: uuid
   bed_type_id: uuid
}
class users {
   id: integer
   name: varchar(255)
   email: varchar(255)
   email_verified_at: timestamp(0)
   password: varchar(255)
   role: varchar(255)
   remember_token: varchar(100)
}

check_ins |o--|| employees  : created_by
check_outs |o--|| employees  : created_by
check_ins ||--|| reservations : has_one
check_outs ||--|| reservations : has_one
countries |o--o{ users : has
employees }o--|| departments : has
employees ||--|| users : has_one
geographies |o--o{ users : has
guests ||--|| users : has_one
nationalities |o--o{ users : has
reservation_guests ||--|| guests : has_one
reservation_guests ||--|| reservations : has_one
reservation_rooms ||--|| room_types : has_one
reservation_rooms ||--|| rooms : has_one
reservation_rooms ||--|| reservations : has_one
reservation_transactions ||--|| reservations : has_one
reservations }o--o| employees : created_by
room_facilities }o--|| facilities : has
room_facilities }o--|| rooms : has
room_type_facilities }o--|| facilities : has
room_type_facilities }o--|| room_types : has
room_types }o--|| bed_types : has
room_types }o--|| rate_types : has
rooms }o--|| bed_types : has
rooms }o--|| rate_types : has
rooms }o--|| room_types : has

@enduml
